@@ -6,6 +6,7 @@ bad_md5 = [
 ]
 
 good_md5 = [
+        'eed5fc787ce6a45afb23e9f7b84175cf',
         'sentinel'
 ]
 
